crates/tests/libs/bindgen/data/error/fn_unexpected_self/input.rdl

#[winrt]
mod Test {
    #[library("lib")]
    extern fn F(&self);
}
        